[project]
name = "cmcs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=6.29.5",
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "mesa>=3.2.0",
    "networkx>=3.4.2",
    "notebook>=7.4.2",
    "seaborn>=0.13.2",
    "solara>=1.47.0",
]
